--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "npm run build && node dist/index.js",
     "makeProto": "protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=. ./src/protos/multipay.proto --ts_proto_opt=outputServices=grpc-js,esModuleInterop=true",
     "docker:dev": "docker compose -f docker-compose.dev.yml up",
-    "docker:build": "docker compose up --build -d"
+    "docker:build": "docker compose up --build -d",
+    "lint": "npx eslint"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.12.6",
@@ -19,18 +20,24 @@
     "@mikro-orm/mongodb": "^6.4.8",
     "@mikro-orm/mysql": "^6.4.8",
     "@mikro-orm/postgresql": "^6.4.8",
+    "@trustwallet/wallet-core": "^4.2.14",
+    "D": "^1.0.0",
     "dotenv": "^16.4.7",
     "linksmith": "^1.3.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.9",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "ts-proto": "^2.6.1",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0"
   },
   "files": [
     "dist",
