--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@mikro-orm/mysql": "^6.4.8",
     "@mikro-orm/postgresql": "^6.4.8",
     "@trustwallet/wallet-core": "^4.2.14",
+    "axios": "^1.8.3",
     "dotenv": "^16.4.7",
     "linksmith": "^1.3.1",
-    "moralis": "^2.27.2"
+    "tronweb": "^6.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
