--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@mikro-orm/mysql": "^6.4.8",
     "@mikro-orm/postgresql": "^6.4.8",
     "@trustwallet/wallet-core": "^4.2.14",
+    "apollo-server": "^3.13.0",
     "axios": "^1.8.3",
     "dotenv": "^16.4.7",
+    "graphql": "^16.10.0",
     "linksmith": "^1.3.1",
     "tronweb": "^6.0.1"
   },
