Add GraphQL and gRPC server implementations; configure testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "emitDecoratorMetadata": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "src/**/*.test.ts"
   ],
   "exclude": [
     "node_modules"
