--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "npx eslint"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.12.6",
+    "@apollo/client": "^3.13.5",
     "@mikro-orm/core": "^6.4.8",
     "@mikro-orm/mongodb": "^6.4.8",
     "@mikro-orm/mysql": "^6.4.8",
@@ -30,13 +30,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@grpc/grpc-js": "^1.13.1",
+    "@grpc/proto-loader": "^0.7.13",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.9",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
-    "ts-jest": "^29.2.6",
+    "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
     "ts-proto": "^2.6.1",
     "typescript": "^5.8.2",
